test/corpus/string_interpolation.txt
================================================================================
string interpolation
================================================================================

"test${foo}"

--------------------------------------------------------------------------------

(manifest
  (string
    (string_content)
    (interpolation
      (variable
        (identifier
          (name))))))

================================================================================
string interpolation explicit sigil
================================================================================

"test${$foo}"

--------------------------------------------------------------------------------

(manifest
  (string
    (string_content)
    (interpolation
      (variable
        (identifier
          (name))))))

================================================================================
string interpolation hash
================================================================================

"test${foo['test']['bar']}"

--------------------------------------------------------------------------------

(manifest
  (string
    (string_content)
    (interpolation
      (variable
        (identifier
          (name)))
      (variable
        (string
          (string_content))
        (string
          (string_content))))))

================================================================================
string interpolation with absolute variable without sigil
================================================================================
"test ${::foo}"
--------------------------------------------------------------------------------

(manifest
  (string
    (string_content)
    (interpolation
      (variable
        (identifier
          (name))))))
