test/corpus/strings.txt
================================================================================
strings single quote
================================================================================
'string'
'foo-bar/asdf'
--------------------------------------------------------------------------------

(manifest
  (string
    (string_content))
  (string
    (string_content)))

================================================================================
strings double quote
================================================================================
"string"
--------------------------------------------------------------------------------

(manifest
  (string
    (string_content)))

================================================================================
strings with interpolation
================================================================================
"/usr/${test}/var"
--------------------------------------------------------------------------------

(manifest
  (string
    (string_content)
    (interpolation
      (variable
        (identifier
          (name))))
    (string_content)))

================================================================================
strings interpolation without braces
================================================================================
"/usr/$test/var"
--------------------------------------------------------------------------------

(manifest
  (string
    (string_content)
    (variable
      (identifier
        (name)))
    (string_content)))

================================================================================
strings escape sequence
================================================================================
"foo\"bar"

--------------------------------------------------------------------------------

(manifest
  (string
    (string_content)
    (escape_sequence)
    (string_content)))

================================================================================
strings escape sequence single quote
================================================================================
'moe\'s bar'
--------------------------------------------------------------------------------

(manifest
  (string
    (string_content)
    (escape_sequence)
    (string_content)))

================================================================================
strings single underscore
================================================================================
'_'
--------------------------------------------------------------------------------

(manifest
  (string
    (string_content)))
