test/corpus/virtual_and_exported_resources.txt
================================================================================
virtual and exported resources virtual
================================================================================

@foo::bar { 'test': }

--------------------------------------------------------------------------------

(manifest
  (resource_call
    (virtual)
    (identifier
      (name)
      (name))
    (resource_title
      (string_content))))

================================================================================
virtual and exported resources exported
================================================================================
@@foo::bar { 'test': }
--------------------------------------------------------------------------------

(manifest
  (resource_call
    (exported)
    (identifier
      (name)
      (name))
    (resource_title
      (string_content))))
